[package]
name = "avg32"
version = "0.1.0"
authors = ["Ruin0x11 <ipickering2@gmail.com>"]
edition = "2018"

[dependencies]
nom = "5"
nom-trace = "0.2.1"
serde = "1.0.117"
serde_derive = "1.0.117"
encoding_rs = "0.8.24"
byteorder = "1.3.4"
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
